--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1,9 +1,15 @@
+@import 'mixins';
+
 $border-width: 0px;
 
 .index-content {
-    width: 960px;
+    width: 744px;
     border: $border-width solid $border;
     margin: auto;
+
+    @include phone {
+        width: 100vw;
+    }
 
     .hero {
         display: flex;
@@ -34,9 +40,13 @@ $border-width: 0px;
     .bubble-container {
         margin-top: 80px;
 
+        @include phone {
+            display: none;
+        }
+
         .bubble {
             display: flex;
-            margin: 80px;
+            margin-bottom: 60px;
             background: $bubble-background;
             border: $border-width solid $border;
     
@@ -92,12 +102,21 @@ $border-width: 0px;
         border: $border-width solid $border;
         justify-content: center;
 
+        @include phone {
+            align-items: center;
+        }
+
         .feature {
             display: flex;
             justify-content: space-between;
-            width: 800px;
+            width: 744px;
             margin: 40px 0;
             border: $border-width solid $border;
+
+            .spacer {
+                width: 21px;
+                border: $border-width solid $border;
+            }
     
             .image {
                 height: 284px;
@@ -106,8 +125,15 @@ $border-width: 0px;
                 background: black;
                 border-radius: 21px;
 
+                @include phone {
+                    width: 320px;
+                    height: 240px;
+                }
+
                 img {
                     border-radius: 21px;
+                    width: 100%;
+                    height: 100%;
                 }
 
                 div {
@@ -124,9 +150,14 @@ $border-width: 0px;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                width: 400px;
+                width: 380px;
                 // margin: 21px;
                 border: $border-width solid $border;
+
+                @include phone {
+                    width: 320px;
+                    margin-top: 21px;
+                }
 
                 h3 {
                     font-size: 30px;
@@ -140,6 +171,10 @@ $border-width: 0px;
                     margin: 0px;
                     margin-top: 12px;
 
+                    @include phone {
+                        margin-top: 3px;
+                    }
+
                     small {
                         font-size: 12px;
                         line-height: 1.5em;
@@ -147,12 +182,22 @@ $border-width: 0px;
                     }
                 }
             }
+
+            @include phone {
+                width: calc(100vw - 24px);
+                align-items: center;
+                flex-direction: column;
+            }
         }
     }
     
     .feature-container:nth-of-type(even) {
       .feature {
         flex-direction: row-reverse;
+
+        @include phone {
+            flex-direction: column;
+        }
       }
     }
 }
