--- a/assets/_sass/_page.scss
+++ b/assets/_sass/_page.scss
@@ -1,26 +1,11 @@
 article {
-    max-width: 38rem;
-    margin: auto;
-    margin-top: 3rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    margin-top: 80px;
+    width: 512px;
+    flex: 1;
 
-    .post-header, .post-content {
-        grid-column-start: 1;
-        grid-column-end: span 8;
-
-        @media screen and (max-width: 480px) {
-            grid-column-end: span 12;
-        }
-    }
-
-    .post-header {
-        h1 {
-            margin-top: 0;
-        }
-    }
-
-    @media screen and (max-width: 480px) {
-        padding: 0 20px;
+    @include phone {
+        margin-top: 40px;
+        width: calc(100vw - 24px);
+        padding: 0px 12px;
     }
 }
